# mealy

./: .CMakeLists.txt.swp  .clang-format  .gitignore  .gitignore.swp  .main.cpp.swp  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.323DF27B8C26601C.idx  mealy.hpp.10FBC5AB806303F4.idx
inc/mealy/: mealy.hpp
mealy/: .mealy.hpp.swp  mealy.hpp
